force-app/main/default/objects/Video_Content_small_chunks_chunk__dlm/Video_Content_small_chunks_chunk__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Semantic</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Content</objectCategory>
    </mktDataModelAttributes>
</CustomObject>