force-app/main/default/objects/Video_Content_small_chunks_chunk__dlm/fields/Chunk__c.field-meta.xml
<CustomField>
    <fullName>Chunk__c</fullName>
    <label>Chunk</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>