force-app/main/default/objects/Video_Content_small_chunks_chunk__dlm/fields/rel_1714246742025_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1714246742025_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Video_Content_small_chunks_chunk_Sou_rel</label>
    <referenceTo>Video_Content__dlm</referenceTo>
    <relationshipLabel>Video_Content_small_chunks_chunk_Sou_rel</relationshipLabel>
    <relationshipName>rel_1714246742025_end</relationshipName>
    <type>Lookup</type>
</CustomField>